# aidevtools

./: .gitignore  README.md  build_golden.sh  ci.sh  install.sh  pyproject.toml  softmax_bfp8_16x128x256.txt  softmax_bfp8_16x128x256_result.txt  test_demo9_logic.py  todo.md
.github/workflows/: ci.yml
aidevtools/: __init__.py  datagen.py  torch_backend.py
aidevtools/commands/: compare.py
aidevtools/compare/: __init__.py  bitwise.py  blocked.py  engine.py  exact.py  fuzzy.py  metrics.py  model.py  model_visualizer.py  report.py  sanity.py  types.py  visualizer.py
aidevtools/compare/report/: __init__.py  model_visualizer.py  text_report.py
aidevtools/compare/strategy/: __init__.py  base.py  bit_analysis.py  bit_xor.py  blocked.py  composite.py  exact.py  fuzzy.py  sanity.py  tiered.py
aidevtools/core/: __init__.py  memory_types.py  random.py
aidevtools/formats/: __init__.py  base.py  block_format.py  block_format_guide.md  filename_parser.py  hex_text.py  quantize.py
aidevtools/formats/custom/: cpp_loader.py  ieee.py
aidevtools/frontend/: datagen.py  types.py
aidevtools/golden/cpp/: CMakeLists.txt  cpu_golden_wrapper.sh
aidevtools/ops/: __init__.py  base.py  context.py  datagen.py  test_generator.py
aidevtools/optimizer/: ARCHITECTURE.md  __init__.py  benchmark.py  bridge.py  calibration.py  comparison.py  cost_model.py  fusion_rules.py  hyper_calibrator.py  measurement_archive.py  memory_plan.py
aidevtools/optimizer/demos/: 01_basic.py  02_calibration.py  03_fusion_rules.py  04_echarts.py  05_comparison.py  06_bridge.py  __init__.py  demo_basic.py
aidevtools/optimizer/strategy/: base.py  baseline.py  fuse_speedup.py
aidevtools/optimizer/views/: __init__.py  base.py  compute.py  echarts.py  memory.py  roofline.py
aidevtools/theory_optimizer/: __init__.py  benchmark.py  evaluator.py  measurement_archive.py
aidevtools/theory_optimizer/strategy/: __init__.py  efficiency_aware.py
aidevtools/theory_optimizer/views/: __init__.py  bandwidth.py
aidevtools/toolchain/: config.py  download.py  manager.py
aidevtools/tools/compare/: diff.py
aidevtools/xlsx/: import_.py  run.py
demos/: README.md  ops_demo.py  transformer_analysis_demo.py  xlsx_demo.py
demos/01_basic_ops/: run.py
demos/02_mini_transformer/: run.py
demos/02_unified_workflow/: README.md  run.py
demos/03_transformer/: README.md  model.py  operators.py  run.py
demos/04_xlsx_basic/: run.py
demos/05_xlsx_transformer/: run.py
demos/06_add_ops/: README.md
demos/07_transpose/: run.py
demos/08_paper_analysis/: main.py
demos/compare/: README.md  __init__.py  demo_09_full_pipeline.py  fake_compiler.py  run_all.sh  todo.md
demos/compare/06_encoder_bfp8/: run.py
demos/compare/07_qa_encoder_bfp8/: run.py
demos/compare/08_bitwise_encoder_bfp8/: run.py
demos/compare/09_autoload_replay/: run.py
demos/compare/compare_01_encoder_pure_vs_fp16/: run.py
demos/compare/compare_02_encoder_pure_vs_fuzzq/: run.py
demos/compare/compare_03_encoder_fuzzq_vs_qa/: run.py
demos/compare/compare_04_matmul_pure_vs_dut/: run.py
demos/compare/compare_06_encoder_bfp8_fuzzq/: run.py
demos/compare/compare_07_encoder_bfp8_qa/: run.py
demos/compare/compare_08_transformer_bfp8_qa/: run.py
demos/compare/compare_10_model_tiered/: run.py
demos/datagen/01_datagen_autogen/: run.py
demos/datagen/datagen_00_manual/: run.py
demos/datagen/datagen_01_autogen/: run.py
demos/datagen/datagen_02_dsl/: run.py
demos/datagen/datagen_03_torch/: run.py
demos/datagen/datagen_04_xlsx/: run.py
demos/datagen/datagen_05_cqa/: run.py
demos/datagen/datagen_06_qa_vs_cqa/: run.py
demos/optimizer/01_basic/: run.py
demos/optimizer/04_echarts/: run.py
demos/optimizer/05_comparison/: run.py
demos/optimizer/optimizer_02_calibration/: run.py
demos/optimizer/optimizer_03_fusion_rules/: run.py
demos/optimizer/optimizer_06_bridge/: run.py
demos/transformer/: model.py  operators.py  run_golden.py
docs/: architecture.md  compare_guide.md  compare_missing_features.md  compare_strategy_guide.md  compare_visualization_architecture.md  compare_visualization_quickstart.md  compare_visualization_summary.md
docs/design/: compare_module_design.md  datagen_module_design.md
examples/: 01_basic_cli.py
src/aidevtools/: __init__.py  cli.py
src/aidevtools/analysis/: __init__.py  analyzer.py  chip.py  export.py  latency.py  models.py  profile.py
src/aidevtools/commands/: __init__.py  compare.py  trace.py
src/aidevtools/core/: __init__.py  config.py  engine.py  log.py  op.py  tensor.py  utils.py
src/aidevtools/examples/: ops_demo.py
src/aidevtools/formats/: __init__.py  base.py  numpy_fmt.py  quantize.py  raw.py
src/aidevtools/formats/custom/gfloat/cpp/: CMakeLists.txt
src/aidevtools/fsm/: __init__.py  dut_adapter.py  hooks.py  report.py  validator.py
src/aidevtools/golden/: .gitignore  __init__.py  cpu_ops.py  (+1 more)
src/aidevtools/golden/cpp/: CMakeLists.txt  README.md  bfp_io.cpp  bfp_io.h  bfp_main.cpp  build.sh  gfloat_io.h  gfloat_ops.cpp  gfloat_ops.h  interface.h  main.cpp  ops_impl.cpp
src/aidevtools/golden/cpp/bfp/: impl.cpp  io.cpp  io.h
src/aidevtools/golden/cpp/gfloat/: impl.cpp
src/aidevtools/golden/cpp/io/: gfloat_io.cpp
src/aidevtools/golden/cpp/ops/: impl.cpp  interface.h
src/prettycli/: __init__.py  app.py  cli.py  command.py  context.py  ui.py  vscode.py
tests/: conftest.py  test_interactive.py
tests/compare/: test_compare.py
tests/e2e/: test_cli.py
tests/it/: test_export.py  test_runner.py
tests/st/: test_compare_cmd.py  test_compare_diff_cmd.py
tests/system/: test_vscode_client.py
tests/trace/: test_trace.py
tests/unit/: test_app.py  test_builtins.py  test_cli.py  test_echo_status.py  test_statusbar.py  test_system_status.py  test_vscode_integration.py
tests/ut/: test_analysis.py  test_bfp.py  test_compare.py  test_cpu_golden.py  test_fuzzy.py  test_golden.py  test_model_data_dir.py  test_ops.py  test_qa_weights.py  test_quantize.py  test_random.py  test_registry.py  test_torch_backend.py  test_torch_compat.py  test_transpose.py  test_xlsx.py
(+77 files in other folders)
