[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidevtools"
version = "0.1.0"
description = "AI operator development toolkit"
requires-python = ">=3.8"
dependencies = [
    "prettycli @ file:libs/prettycli",
    "numpy>=1.21",
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
vscode = [
    "websocket-client>=1.6.0",
]

[project.scripts]
aidev = "aidevtools.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aidevtools"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
